--- a/manifest.json
+++ b/manifest.json
@@ -26,8 +26,8 @@
   ],
   "content_scripts": [ // 内容页
     {
-      "matches": ["*://e.101.com/*","*://xue.101.com/*"],
-      "js": ["jquery-1.7.1.js","tab.js"],
+      "matches": ["*://e.101.com/*", "*://xue.101.com/*", "*://elearning.101.com/*"],// 插件的响应页面
+      "js": ["jquery-1.7.1.js", "tab.js"],
       "run_at": "document_end"
 //      "match_about_blank":true,
 //      "all_frames": true
